--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-Hello
+<body background-image: url('https://tinyurl.com/MBParchment1');>
+
+  Hello this will be the new site for Magic Bakery!<br>
+  In the meantime please visit <a href="https://panarcana.blogspot.com/">our blog</a> for more information!<br>
+      
+</body>
